// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contributors /> list contributors 1`] = `
<Contributors
  data={
    Immutable.List [
      Immutable.Map {
        "login": "user1",
        "html_url": "https://user1/\\",",
        "avatar": "https://avatars1/",
      },
      Immutable.Map {
        "login": "user2",
        "html_url": "https://user2/\\",",
        "avatar": "https://avatars2/",
      },
      Immutable.Map {
        "login": "user3",
        "html_url": "https://user3/\\",",
        "avatar": "https://avatars3/",
      },
    ]
  }
  hasLoaded={true}
  hasMore={true}
  isLoadingMore={false}
  onNext={[Function]}
  total={3}
>
  <styled.div>
    <div
      className="sc-bdVaJa LrVZr"
    >
      <styled.h3>
        <h3
          className="sc-bwzfXH iAozsW"
        >
          Contributors (
          3
          )
        </h3>
      </styled.h3>
      <Content
        data={
          Immutable.List [
            Immutable.Map {
              "login": "user1",
              "html_url": "https://user1/\\",",
              "avatar": "https://avatars1/",
            },
            Immutable.Map {
              "login": "user2",
              "html_url": "https://user2/\\",",
              "avatar": "https://avatars2/",
            },
            Immutable.Map {
              "login": "user3",
              "html_url": "https://user3/\\",",
              "avatar": "https://avatars3/",
            },
          ]
        }
        hasLoaded={true}
        hasMore={true}
        isLoadingMore={false}
        onNext={[Function]}
        total={3}
      >
        <div>
          <styled.ul>
            <ul
              className="sc-htpNat hppgGZ"
            >
              <styled.li
                key="user10"
              >
                <li
                  className="sc-bxivhb gUOEDj"
                >
                  <styled.a
                    href="https://user1/\\","
                  >
                    <a
                      className="sc-ifAKCX ibOcjp"
                      href="https://user1/\\","
                    >
                      <styled.img>
                        <img
                          className="sc-EHOje dcMEop"
                        />
                      </styled.img>
                      <styled.span>
                        <span
                          className="sc-bZQynM fGQOqI"
                        >
                          user1
                        </span>
                      </styled.span>
                    </a>
                  </styled.a>
                </li>
              </styled.li>
              <styled.li
                key="user21"
              >
                <li
                  className="sc-bxivhb gUOEDj"
                >
                  <styled.a
                    href="https://user2/\\","
                  >
                    <a
                      className="sc-ifAKCX ibOcjp"
                      href="https://user2/\\","
                    >
                      <styled.img>
                        <img
                          className="sc-EHOje dcMEop"
                        />
                      </styled.img>
                      <styled.span>
                        <span
                          className="sc-bZQynM fGQOqI"
                        >
                          user2
                        </span>
                      </styled.span>
                    </a>
                  </styled.a>
                </li>
              </styled.li>
              <styled.li
                key="user32"
              >
                <li
                  className="sc-bxivhb gUOEDj"
                >
                  <styled.a
                    href="https://user3/\\","
                  >
                    <a
                      className="sc-ifAKCX ibOcjp"
                      href="https://user3/\\","
                    >
                      <styled.img>
                        <img
                          className="sc-EHOje dcMEop"
                        />
                      </styled.img>
                      <styled.span>
                        <span
                          className="sc-bZQynM fGQOqI"
                        >
                          user3
                        </span>
                      </styled.span>
                    </a>
                  </styled.a>
                </li>
              </styled.li>
            </ul>
          </styled.ul>
          <styled.button
            onClick={[Function]}
          >
            <button
              className="sc-gzVnrw kKiVFV"
              onClick={[Function]}
            >
              More
            </button>
          </styled.button>
        </div>
      </Content>
    </div>
  </styled.div>
</Contributors>
`;

exports[`<Contributors /> show button Loading 1`] = `
<Contributors
  data={Array []}
  hasLoaded={true}
  hasMore={true}
  isLoadingMore={false}
  onNext={[Function]}
  total={3}
>
  <styled.div>
    <div
      className="sc-bdVaJa LrVZr"
    >
      <styled.h3>
        <h3
          className="sc-bwzfXH iAozsW"
        >
          Contributors (
          3
          )
        </h3>
      </styled.h3>
      <Content
        data={Array []}
        hasLoaded={true}
        hasMore={true}
        isLoadingMore={false}
        onNext={[Function]}
        total={3}
      >
        <div>
          <styled.ul>
            <ul
              className="sc-htpNat hppgGZ"
            />
          </styled.ul>
          <styled.button
            onClick={[Function]}
          >
            <button
              className="sc-gzVnrw kKiVFV"
              onClick={[Function]}
            >
              More
            </button>
          </styled.button>
        </div>
      </Content>
    </div>
  </styled.div>
</Contributors>
`;

exports[`<Contributors /> show button More 1`] = `
<Contributors
  data={Array []}
  hasLoaded={true}
  hasMore={true}
  isLoadingMore={false}
  onNext={[Function]}
  total={3}
>
  <styled.div>
    <div
      className="sc-bdVaJa LrVZr"
    >
      <styled.h3>
        <h3
          className="sc-bwzfXH iAozsW"
        >
          Contributors (
          3
          )
        </h3>
      </styled.h3>
      <Content
        data={Array []}
        hasLoaded={true}
        hasMore={true}
        isLoadingMore={false}
        onNext={[Function]}
        total={3}
      >
        <div>
          <styled.ul>
            <ul
              className="sc-htpNat hppgGZ"
            />
          </styled.ul>
          <styled.button
            onClick={[Function]}
          >
            <button
              className="sc-gzVnrw kKiVFV"
              onClick={[Function]}
            >
              More
            </button>
          </styled.button>
        </div>
      </Content>
    </div>
  </styled.div>
</Contributors>
`;

exports[`<Contributors /> shows loading 1`] = `
<Contributors
  hasLoaded={false}
  total={3}
>
  <styled.div>
    <div
      className="sc-bdVaJa LrVZr"
    >
      <styled.h3>
        <h3
          className="sc-bwzfXH iAozsW"
        >
          Contributors (
          3
          )
        </h3>
      </styled.h3>
      <Loading>
        <div>
          Loading...
        </div>
      </Loading>
    </div>
  </styled.div>
</Contributors>
`;
